# uiharu-remake

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  mintty.exe.stackdump  nicknames.json  prompt.txt  pyproject.toml  requirements.txt
Poe/: __init__.py  chat.py  poe.py
cogs/: asking.py  identifying.py  moderating.py
core/: bot.py  classes.py  conversations.py  nicknames.py  static_variables.py  utils.py
forefront/: __init__.py  chat.py  conversation.py  enums.py  forefront.py  sse_event.py
package/: character_ai_bindings-0.1.0-py3-none-any.whl
src/: __init__.py  bot.py  conversations.py  main.py  nicknames.py  type.py  utils.py
src/Poe/: chat.py  client.py  poe.py
src/cogs/: asking.py  identifying.py  moderating.py
src/forefront/: __init__.py  chat.py  enums.py  forefront.py  sse_event.py
