[tool.poetry]
name = "uiharuremake"
version = "0.1.0"
description = ""
authors = ["Nat1an <nathan@nat1an.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.10.13"
aiohttp = "^3.8.5"
disnake = "^2.9.0"
httpx = "^0.24.1"
requests = "^2.31.0"
pymongo = { extras = ["srv"], version = "^4.4.1" }
google-generativeai = "^0.3.2"
openai = "^1.7.2"


[tool.poetry.group.dev.dependencies]
doppler-env = "^0.3.1"
ruff = "^0.0.284"

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "ALL",
]
ignore  = [
    "D203",
    "D213"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-sys1tem]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
